# spectrum

./: .gitignore  CMakeLists.txt  LICENSE  README.md  grep  log  main.cpp
bench/: main.cpp
cmake/: FindJemalloc.cmake
cmake/Hunter/: core_packages.cmake  extra_packages.cmake
contracts/: SmallBank.sol  TPCC.sol  YCSB.sol  tpc-c.sol
draw_exp/: README.md  Schemas.py
draw_exp/draw_checkpoint/: draw_checkpoint.py
draw_exp/draw_latency/: draw_block_latency.py  draw_latency.py
draw_exp/draw_latency/data/: tpcc_uniform.csv
draw_exp/draw_memory/: draw_memory.py
draw_exp/draw_skew_abort/: draw_skew_abort.py
draw_exp/draw_skew_abort/data/: ycsb_pres.csv
draw_exp/draw_skew_op/: draw_skew_op.py
draw_exp/draw_skew_tps/: draw_skew_tps.py
draw_exp/draw_threads_abort/: draw_threads_abort.py
draw_exp/draw_threads_tps/: draw_threads_tps.py
draw_exp/draw_threads_tps/data/: ycsb_compare.csv  ycsb_pres.csv
draw_exp/draw_zipf/: draw_zipf.py
draw_exp/plot/: common.py  plot.py
evmc/include/evmc/: evmc.hpp
exp_results/contracts/: smallbank.sol  ycsb.sol
exp_results/fig13~14/: run-experiment.sh
exp_results/fig13~14/fig13/: smallbank_op_complete_abort  smallbank_op_partial_abort  ycsb_op_complete_abort  ycsb_op_partial_abort
exp_results/fig13~14/fig14/: smallbank_abort  smallbank_checkpoint_overhead  ycsb_abort  ycsb_checkpoint_overhead
exp_results/fig15~16/: run-experiment1.sh  run-experiment2.sh
exp_results/fig15~16/fig15/: pre_skew_tps_ycsb_thread36  pre_threads_tps_ycsb_zipf0999
exp_results/fig15~16/fig16/: pre_skew_abort
exp_results/fig9~12/: run-experiment.sh
exp_results/fig9~12/fig10/: threads_tps_smallbank_uniform
exp_results/fig9~12/fig11/: threads_tps_ycsb_skewed  ycsb_skewed
exp_results/fig9~12/fig12/: smallbank_skewed  threads_tps_smallbank_skewed
exp_results/fig9~12/fig9/: threads_tps_ycsb_uniform
lib/: evm_hash.cpp  evm_hash.hpp  evm_host_impl.cpp  evm_transaction.cpp  evm_transaction.hpp  hex.cpp  hex.hpp  lock-util.hpp  lock-util.test.cpp  lock_queue.hpp  percentile.hpp  protocol-aria-fb.cpp  protocol-aria-fb.hpp  protocol-aria-fb.test.cpp  protocol-calvin.cpp  protocol-calvin.hpp  protocol-dummy.cpp  protocol-dummy.hpp  protocol-serial.cpp  protocol-serial.hpp  protocol-sparkle.cpp  protocol-sparkle.hpp  protocol-sparkle.test.cpp  protocol-spectrum.cpp  protocol-spectrum.hpp  protocol-spectrum.test.cpp  protocol-specturm.cpp  protocol.hpp  random.cpp  random.hpp  statistics.cpp  statistics.hpp  statistics.test.cpp  table.hpp  thread-util.cpp  thread-util.hpp  workload-smallbank.cpp  workload-smallbank.hpp  workload-smallbank.test.cpp  workload-tpcc.hpp  (+3 more)
lib/common/: evm_hash.cpp  evm_host_impl.cpp  evm_transaction.cpp  evm_transaction.hpp  evm_transaction.test.cpp  glog-prefix.hpp  hex.cpp  lock-util.hpp  lock-util.test.cpp  random.cpp  random.hpp  random.test.cpp  statistics.cpp  statistics.hpp  statistics.test.cpp  thread-util.cpp  thread-util.hpp
lib/evmcow/: baseline.cpp  baseline.hpp  baseline_instruction_table.cpp  baseline_instruction_table.hpp  eof.cpp  eof.hpp  execution_state.hpp  execution_state.test.cpp  instructions.hpp  instructions_calls.cpp  instructions_opcodes.hpp  instructions_storage.cpp  instructions_traits.hpp  instructions_xmacro.hpp  tracing.cpp  tracing.hpp  vm.hpp
lib/evmone/: baseline.cpp  baseline.hpp  baseline_instruction_table.cpp  eof.cpp  execution_state.hpp  instructions.hpp  instructions_calls.cpp  instructions_storage.cpp  instructions_traits.hpp  tracing.cpp  tracing.hpp  vm.cpp  vm.hpp
lib/evmtxn/: evm_hash.cpp  evm_host_impl.cpp  evm_transaction.cpp  evm_transaction.hpp  evm_transaction.test.cpp
lib/protocol/: .spectrum.cpp.swp  abstraction.hpp  aria-fb.cpp  aria-fb.hpp  aria-fb.test.cpp  calvin.cpp  calvin.hpp  dummy.cpp  dummy.hpp  serial.cpp  serial.hpp  sparkle-partial.cpp  sparkle-partial.hpp  sparkle-partial.test.cpp  sparkle-pre-sched.cpp  sparkle-pre-sched.hpp  sparkle.cpp  sparkle.hpp  sparkle.test.cpp  spectrum-cache.cpp  spectrum-cache.hpp  spectrum-no-partial-pre-sched.cpp  spectrum-no-partial-pre-sched.hpp  spectrum-no-partial.cpp  spectrum-no-partial.hpp  spectrum-pre-sched.cpp  spectrum-pre-sched.hpp  spectrum-pre-sched.test.cpp  spectrum-sched.cpp  spectrum-sched.hpp  spectrum-sched.test.cpp  spectrum.cpp  spectrum.hpp  spectrum.test.cpp
lib/transaction/: evm-hash.cpp  evm-host-impl.cpp  evm-transaction.cpp  evm-transaction.hpp  evm-transaction.test.cpp
lib/workload/: abstraction.hpp  smallbank.cpp  smallbank.hpp  smallbank.test.cpp  tpcc.cpp  tpcc.hpp  ycsb.cpp  ycsb.hpp  ycsb.test.cpp
scripts/: bench-skew-tps.py  bench-suit.py  bench-suit.sh  bench-threads-tps.py  bench_results  bench_results.csv  draw_threads_tps.py  plot.py
scripts/draw_threads_tps/: draw_threads_tps.py
scripts/plot/: common.py  parse.py  plot.py
src/: CMakeLists.txt  checkpoint.hpp  evm_hash.hpp  evm_host_impl.hpp  evm_transaction.cpp  evm_transaction.hpp  hex.hpp  main.cpp  protocol.hpp  sparkle.cpp  sparkle.hpp  statistics.cpp  statistics.hpp  table.hpp  workload.cpp  workload.hpp
src/evmcow/: baseline.cpp  instructions.hpp  opcodes_helpers.h  tracing.hpp  vm.cpp  vm.hpp
src/evmone/: vm.cpp
src/evmpersist/: advanced_analysis.cpp  advanced_analysis.hpp  advanced_execution.cpp  advanced_execution.hpp  advanced_instructions.cpp  baseline.cpp  baseline.hpp  baseline_instruction_table.cpp  baseline_instruction_table.hpp  eof.cpp  eof.hpp  execution_state.hpp  instructions.hpp  instructions_calls.cpp  instructions_opcodes.hpp  instructions_storage.cpp  instructions_traits.hpp  tracing.cpp  tracing.hpp  vm.cpp  vm.hpp
testing/: concurrent_hashmap_test.cpp  evm_transaction_test.cpp  sparkle_test.cpp  statistics_test.cpp  table_test.cpp
unit-tests/: evm_transaction.test.cpp  glog-prefix-install.hpp  protocol-aria-fb.test.cpp  protocol-sparkle.test.cpp  protocol-spectrum.test.cpp  sparkle.test.cpp  sparkle_test.cpp  statistics.test.cpp  statistics_test.cpp  table.test.cpp  table_test.cpp  workload-smallbank.test.cpp  workload_smallbank.test.cpp  workload_smallbank_test.cpp
(+121 files in other folders)
